Sec16_Chap166-X: additional optimizations